--- a/src/pages/includes.html
+++ b/src/pages/includes.html
@@ -244,6 +244,7 @@
         </div>
       </div>
     </div>
+    <script src="../js/ui.js" defer></script>
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
@@ -434,9 +435,19 @@
 
             await loadIncludes(searchInput.value.trim(), currentPage);
           } else {
+            tgToast({
+              variant: "error",
+              message: "Failed to fetch languages.",
+            });
+
             console.error("Failed to fetch languages");
           }
         } catch (err) {
+          tgToast({
+            variant: "error",
+            message: "Network error while fetching languages.",
+          });
+
           console.error("Error fetching languages:", err);
         }
       }
@@ -457,6 +468,8 @@
             renderTable(lastPageItems);
             renderPagination(data.data.pageNumber, data.data.count);
           } else {
+            tgToast({ variant: "error", message: "Failed to load includes." });
+
             tableBody.innerHTML = `
               <tr>
                 <td colspan="3" class="px-6 py-8 text-center text-red-500">Failed to load includes</td>
@@ -464,6 +477,11 @@
           }
         } catch (err) {
           console.error(err);
+          tgToast({
+            variant: "error",
+            message: "Network error while loading includes.",
+          });
+
           tableBody.innerHTML = `
             <tr>
               <td colspan="3" class="px-6 py-8 text-center text-red-500">Error loading includes</td>
@@ -606,7 +624,10 @@
           const res = await fetch(`/api/Includes/GetIncludeById/${id}`);
           const data = await res.json();
           if (!res.ok || !data.succeeded) {
-            alert("Failed to load Include for editing");
+            tgToast({
+              variant: "error",
+              message: "Failed to load include for editing.",
+            });
             return;
           }
 
@@ -623,23 +644,21 @@
             const field = document.createElement("div");
             field.className = "space-y-1";
             field.innerHTML = `
-              <label class="block font-medium">${lang.name}</label>
-              <input
-                type="text"
-                name="lang-${lang.id}"
-                placeholder="Translation in ${lang.name}"
-                class="w-full rounded-xl border border-gray-200 bg-white px-3 py-2 shadow-sm focus:border-blue-500 focus:ring-4 focus:ring-blue-500/10 outline-none transition"
-                value="${
-                  existing
-                    ? (existing.translation || "").replace(/"/g, "&quot;")
-                    : ""
-                }"
-                required
-              />
-              <input type="hidden" name="lang-nameid-${lang.id}" value="${
+        <label class="block font-medium">${lang.name}</label>
+        <input
+          type="text"
+          name="lang-${lang.id}"
+          placeholder="Translation in ${lang.name}"
+          class="w-full rounded-xl border border-gray-200 bg-white px-3 py-2 shadow-sm focus:border-blue-500 focus:ring-4 focus:ring-blue-500/10 outline-none transition"
+          value="${
+            existing ? (existing.translation || "").replace(/"/g, "&quot;") : ""
+          }"
+          required
+        />
+        <input type="hidden" name="lang-nameid-${lang.id}" value="${
               existing ? existing.id : ""
             }" />
-            `;
+      `;
             container.appendChild(field);
           });
 
@@ -647,26 +666,43 @@
           if (window.lucide?.createIcons) lucide.createIcons();
         } catch (err) {
           console.error("Error fetching include for edit:", err);
-          alert("Error loading include");
+          tgToast({
+            variant: "error",
+            message: "Network error while loading include.",
+          });
         }
       };
 
       window.deleteInclude = async function (id) {
-        if (!confirm("Are you sure you want to delete this include?")) return;
+        const ok = await tgConfirm({
+          title: "Delete this include?",
+          body: "This action cannot be undone.",
+          confirmText: "Delete",
+          cancelText: "Cancel",
+          danger: true,
+        });
+        if (!ok) return;
+
         try {
           const res = await fetch(`/api/Includes/DeleteInclude/${id}`, {
             method: "DELETE",
           });
           const data = await res.json();
           if (res.ok && data.succeeded) {
-            alert("Include deleted");
+            tgToast({ variant: "success", message: "Include deleted." });
             loadIncludes(searchInput.value.trim(), currentPage);
           } else {
-            alert("Failed to delete Include");
+            tgToast({
+              variant: "error",
+              message: data.message || "Failed to delete include.",
+            });
           }
         } catch (err) {
           console.error(err);
-          alert("Error deleting include");
+          tgToast({
+            variant: "error",
+            message: "Network error while deleting include.",
+          });
         }
       };
 
@@ -693,49 +729,55 @@
 
             const data = await res.json();
             if (res.ok && data.succeeded) {
-              alert("Include added!");
+              tgToast({ variant: "success", message: "Include added." });
               form.reset();
               closeSheet();
               loadIncludes(searchInput.value.trim(), currentPage);
             } else {
-              alert("Failed: " + (data.message || "Unknown error"));
+              tgToast({
+                variant: "error",
+                message:
+                  "Failed to add include: " + (data.message || "Unknown error"),
+              });
             }
           } else {
-            // EDIT: update each translation by its nameId (kept as in your API)
-            const updatePromises = availableLanguages.map(async (lang) => {
-              const translation = form.elements[`lang-${lang.id}`].value.trim();
-              const nameId = form.elements[`lang-nameid-${lang.id}`]?.value;
+            // UPDATE per-translation (backend expects { name: <translation> } here)
+            const results = await Promise.all(
+              availableLanguages.map(async (lang) => {
+                const translation =
+                  form.elements[`lang-${lang.id}`].value.trim();
+                const nameId = form.elements[`lang-nameid-${lang.id}`]?.value;
+                if (nameId && translation) {
+                  const response = await fetch(
+                    `/api/Includes/UpdateInclude/${nameId}`,
+                    {
+                      method: "PUT",
+                      headers: { "Content-Type": "application/json" },
+                      body: JSON.stringify({ name: translation }),
+                    }
+                  );
+                  return response.ok;
+                }
+                return true; // skip when there's nothing to update
+              })
+            );
 
-              if (nameId && translation) {
-                const response = await fetch(
-                  `/api/Includes/UpdateInclude/${nameId}`,
-                  {
-                    method: "PUT",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ name: translation }), // your backend expects { name }
-                  }
-                );
-                return response.ok;
-              } else {
-                // skip if missing id (or implement "create translation" if supported)
-                return true;
-              }
-            });
-
-            const results = await Promise.all(updatePromises);
             const allOk = results.every(Boolean);
-
             if (allOk) {
+              tgToast({ variant: "success", message: "Include updated." });
               form.reset();
               closeSheet();
               loadIncludes(searchInput.value.trim(), currentPage);
             } else {
-              alert("Some translations failed to update.");
+              tgToast({
+                variant: "warning",
+                message: "Some translations failed to update.",
+              });
             }
           }
         } catch (err) {
           console.error(err);
-          alert("Error while saving Include.");
+          tgToast({ variant: "error", message: "Error while saving include." });
         }
       });
 
