--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- hide until auth completes -->
+    <style>
+      html[data-auth="checking"] body {
+        visibility: hidden;
+      }
+    </style>
+    <script>
+      document.documentElement.setAttribute("data-auth", "checking");
+    </script>
+
     <link href="../output.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/style.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -11,6 +21,12 @@
       href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+    <script
+      src="../js/auth-guard.js"
+      defer
+      data-redirect="../index.html"
+    ></script>
+
     <title>Tour Guide Admin Panel</title>
   </head>
   <body class="bg-gray-50 text-gray-800 font-sans">
