--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -778,6 +778,72 @@
         }
         return html;
       }
+
+      // === Auth helpers: auto-attach token, refresh on 401/403, and retry ===
+      const AUTH = {
+        get token() {
+          return localStorage.getItem("accessToken");
+        },
+        set token(v) {
+          if (v) localStorage.setItem("accessToken", v);
+        },
+      };
+
+      async function refreshAccessToken() {
+        // If your backend expects POST, change method accordingly.
+        const res = await fetch("/api/Auth/GetToken", {
+          credentials: "include",
+        });
+        // Try best-effort to extract a token from common shapes
+        let json = null,
+          text = null;
+        try {
+          json = await res.clone().json();
+        } catch (_) {
+          text = await res.text();
+        }
+
+        const newToken =
+          json?.data?.accessToken ||
+          json?.data?.token ||
+          json?.token ||
+          json?.accessToken ||
+          (typeof text === "string" && text.trim() ? text.trim() : null);
+
+        if (!res.ok || !newToken) {
+          throw new Error("Failed to refresh token");
+        }
+        AUTH.token = newToken;
+        return newToken;
+      }
+
+      async function fetchWithAuth(
+        url,
+        options = {},
+        { retryOnAuthError = true } = {}
+      ) {
+        const headers = new Headers(options.headers || {});
+        if (AUTH.token && !headers.has("Authorization")) {
+          headers.set("Authorization", `Bearer ${AUTH.token}`);
+        }
+        const opts = { ...options, headers };
+
+        let res = await fetch(url, opts);
+
+        // If unauthorized, try to refresh token once, then retry
+        if ((res.status === 401 || res.status === 403) && retryOnAuthError) {
+          try {
+            await refreshAccessToken();
+            headers.set("Authorization", `Bearer ${AUTH.token}`);
+            res = await fetch(url, { ...options, headers });
+          } catch (_) {
+            // refresh failed – return original unauthorized response
+            return res;
+          }
+        }
+        return res;
+      }
+
       function syncPopoverFromState() {
         if (sortSelectPopover) sortSelectPopover.value = filters.sort || "";
         if (availableFilterPopover)
@@ -874,8 +940,8 @@
         }
         empty.classList.add("hidden");
 
-        lastReviews.forEach((rv, idx) => {
-          const reviewId = rv.id ?? rv.reviewId ?? null; // use if your API returns it
+        lastReviews.forEach((rv) => {
+          const userId = rv.userId ?? null; // <<— we use this for delete body
           const card = document.createElement("div");
           card.className = "rounded-xl border border-gray-200 bg-white p-4";
 
@@ -901,24 +967,22 @@
             type="button"
             class="ml-3 inline-flex items-center gap-1 rounded-lg px-2.5 py-1.5 text-xs font-medium text-rose-700 bg-rose-50 ring-1 ring-rose-200 hover:bg-rose-100 disabled:opacity-50"
             data-action="delete-review"
-            ${reviewId ? "" : "disabled"}
-            data-review-id="${reviewId ?? ""}"
+            ${userId != null ? "" : "disabled"}
+            data-user-id="${userId ?? ""}"
             title="${
-              reviewId
+              userId != null
                 ? "Delete review"
-                : "Delete not available (no ID from API)"
+                : "Delete not available (no userId)"
             }"
           >
             <i data-lucide="trash-2" class="h-3.5 w-3.5"></i> Delete
           </button>
         </div>
       </div>
-
       <p class="mt-3 text-sm text-gray-700 whitespace-pre-line">${
         rv.comment || ""
       }</p>
     `;
-
           wrap.appendChild(card);
         });
 
@@ -985,14 +1049,20 @@
         }
       }
 
-      async function handleDeleteReview(reviewId) {
-        if (!reviewId) {
+      async function handleDeleteReview(userId) {
+        if (!currentTripId) {
+          tgToast({ variant: "warning", message: "No trip is open." });
+          return;
+        }
+        const parsedUserId = Number(userId);
+        if (!Number.isFinite(parsedUserId)) {
           tgToast({
             variant: "warning",
-            message: "Cannot delete: review ID not provided by the API.",
+            message: "Cannot delete: invalid userId.",
           });
           return;
         }
+
         const ok = await tgConfirm({
           title: "Delete review?",
           body: "This action cannot be undone.",
@@ -1001,24 +1071,45 @@
         });
         if (!ok) return;
 
-        //   // ⚠️ TODO: Replace with your real endpoint/method when you share it
-        //   alert(
-        //     "Delete endpoint is not configured yet. Please plug it in when available."
-        //   );
-        // Example wiring (commented):
-        /*
-  const token = localStorage.getItem("accessToken");
-  const res = await fetch(`/api/Reviews/DeleteReview/${reviewId}`, {
-    method: "DELETE",
-    headers: { ...(token ? { Authorization: `Bearer ${token}` } : {}) },
-  });
-  const result = await res.json();
-  if (res.ok && result?.succeeded) {
-    await fetchAndRenderReviews(currentTripId, reviewsSortValue);
-  } else {
-    alert("Failed to delete review.");
-  }
-  */
+        try {
+          const res = await fetchWithAuth(
+            `/api/Reviews/DeleteReview/${currentTripId}`,
+            {
+              method: "DELETE",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ id: parsedUserId }),
+            }
+          );
+
+          let result, text;
+          try {
+            result = await res.clone().json();
+          } catch {
+            text = await res.text();
+          }
+
+          if (!res.ok || result?.succeeded === false) {
+            const msg =
+              result?.message ||
+              result?.errors?.join?.(", ") ||
+              text ||
+              `HTTP ${res.status}`;
+            tgToast({
+              variant: "error",
+              message: `Failed to delete review. ${msg}`.trim(),
+            });
+            return;
+          }
+
+          tgToast({ variant: "success", message: "Review deleted." });
+          await fetchAndRenderReviews(currentTripId, reviewsSortValue);
+        } catch (err) {
+          console.error("Delete review error:", err);
+          tgToast({
+            variant: "error",
+            message: "Network error while deleting review.",
+          });
+        }
       }
 
       function updateDeleteButtonState() {
@@ -2538,15 +2629,7 @@
           });
         }
 
-        // Delegate delete clicks inside the list
-        const list = document.getElementById("reviewsList");
-        if (list) {
-          list.addEventListener("click", (e) => {
-            const btn = e.target.closest("[data-action='delete-review']");
-            if (!btn) return;
-            handleDeleteReview(btn.dataset.reviewId || null);
-          });
-        }
+        handleDeleteReview(btn.dataset.userId || null);
       }
 
       // === Initialization ===
