--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1389,7 +1389,7 @@
       }
       function formatPrice(n) {
         const num = Number(n ?? 0);
-        return `<span class="tabular-nums font-semibold">$${num.toFixed(
+        return `<span class="tabular-nums font-semibold">€${num.toFixed(
           2
         )}</span>`;
       }
