--- a/src/pages/booking.html
+++ b/src/pages/booking.html
@@ -107,7 +107,7 @@
               <input
                 id="searchInput"
                 type="text"
-                placeholder="Search name, phone, trip, ID…"
+                placeholder="Search phone, ID…"
                 class="w-full border border-gray-200 rounded-xl pl-10 pr-4 py-2.5 bg-white shadow-sm focus:border-blue-500 focus:ring-4 focus:ring-blue-500/10 outline-none transition"
               />
             </div>
