--- a/src/pages/activities.html
+++ b/src/pages/activities.html
@@ -14,6 +14,8 @@
     <link href="../output.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/style.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="../js/fetch-auth-interceptor.js"></script>
+
     <script
       src="../js/auth-guard.js"
       defer
@@ -808,9 +810,16 @@
         }
       });
 
-      // Wire table sort & initial load
-      setupTableSort();
-      fetchLanguages();
+      function boot() {
+        setupTableSort();
+        fetchLanguages(); // all /api/... calls now auto-attach token and auto-refresh on 401
+      }
+
+      if (document.documentElement.getAttribute("data-auth") === "ready") {
+        boot();
+      } else {
+        document.addEventListener("auth:ready", boot, { once: true });
+      }
     </script>
     <script src="../js/logout.js" defer></script>
   </body>
