--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,16 @@
               </svg>
             </button>
           </div>
+          <div class="text-right">
+            <a
+              href="pages/ForgetPassword.html"
+              id="forgotBtn"
+              class="text-sm text-yellow-600 hover:text-yellow-700 hover:underline focus:outline-none"
+              data-i18n="signin.forgot"
+            >
+              Forgot password?
+            </a>
+          </div>
         </div>
 
         <div id="errorMsg" class="text-red-500 text-sm hidden">
@@ -113,6 +123,7 @@
         © 2025 Tour Guide Admin. All rights reserved.
       </p>
     </div>
+
     <script>
       const passwordInput = document.getElementById("password");
       const togglePasswordBtn = document.getElementById("togglePassword");
