--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
             <a
               href="pages/ForgetPassword.html"
               id="forgotBtn"
-              class="text-sm text-yellow-600 hover:text-yellow-700 hover:underline focus:outline-none"
+              class="text-sm text-blue-600 hover:text-blue-700 hover:underline focus:outline-none"
               data-i18n="signin.forgot"
             >
               Forgot password?
