--- a/src/pages/ForgetPassword.html
+++ b/src/pages/ForgetPassword.html
@@ -115,16 +115,16 @@
         function startCooldown(seconds = 30) {
           let remain = seconds;
           submitBtn.disabled = true;
-          const base = t("forgot.cooldown", { s: remain }); // "Resend in {s}s"
+          const base = t("Resend in {s}s", { s: remain }); // "Resend in {s}s"
           submitBtn.textContent = base;
           cooldownTimer = setInterval(() => {
             remain -= 1;
             if (remain <= 0) {
               clearInterval(cooldownTimer);
               submitBtn.disabled = false;
-              submitBtn.textContent = t("forgot.submit");
+              submitBtn.textContent = "forgot.submit";
             } else {
-              submitBtn.textContent = t("forgot.cooldown", { s: remain });
+              submitBtn.textContent = t("Resend in {s}s", { s: remain });
             }
           }, 1000);
         }
@@ -135,19 +135,19 @@
           const email = (emailInput.value || "").trim();
           if (!email) {
             emailInput.focus();
-            return toast(t("forgot.error.noEmail"), "error");
+            return toast("Please enter your email.", "error");
           }
 
           // Basic client-side email check
           const emailOk = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
           if (!emailOk) {
             emailInput.focus();
-            return toast(t("forgot.error.invalidEmail"), "error");
+            return toast("Please enter a valid email address.", "error");
           }
 
           const original = submitBtn.textContent;
           submitBtn.disabled = true;
-          submitBtn.textContent = t("forgot.sending"); // "Sending…"
+          submitBtn.textContent = "Sending…"; // "Sending…"
 
           try {
             const res = await fetch("/api/Auth/ForgetPassword", {
@@ -163,12 +163,15 @@
 
             if (res.ok) {
               // Security-friendly: never reveal whether an email exists
-              toast(t("forgot.successGeneric"), "success");
+              toast(
+                "If an account exists for that email, a reset link has been sent.",
+                "success"
+              );
               form.reset();
               startCooldown(30);
             } else {
               toast(
-                data?.errors?.join(", ") || t("forgot.error.generic"),
+                data?.errors?.join(", ") || "Couldn't send reset link.",
                 "error"
               );
               submitBtn.disabled = false;
@@ -176,23 +179,17 @@
             }
           } catch (err) {
             console.error(err);
-            toast(t("forgot.error.network"), "error");
+            toast("Network error. Please try again.", "error");
             submitBtn.disabled = false;
             submitBtn.textContent = original;
           }
         });
 
-        // Keep <title> updated after language switch
-        function setPageTitle() {
-          if (typeof window.t === "function") {
-            document.title = window.t("forgot.pageTitle") || document.title;
-          }
-        }
-        document.addEventListener("DOMContentLoaded", setPageTitle);
+        document.addEventListener("DOMContentLoaded");
         const prev = window.refreshLangData;
         window.refreshLangData = async function (...args) {
           const out = await prev?.apply(this, args);
-          setPageTitle();
+
           return out;
         };
       })();
