--- a/src/pages/booking.html
+++ b/src/pages/booking.html
@@ -71,6 +71,12 @@
             <i data-lucide="calendar-check"></i> <span>Bookings</span>
           </a>
           <a
+            href="slider.html"
+            class="flex items-center gap-3 px-4 py-2 rounded-lg text-gray-700 hover:bg-blue-100"
+          >
+            <i data-lucide="image"></i> <span>Slider Images</span>
+          </a>
+          <a
             href="#"
             id="logoutBtn"
             class="flex items-center gap-3 px-4 py-2 rounded-lg text-red-600 hover:bg-red-100"
