--- a/src/pages/slider.html
+++ b/src/pages/slider.html
@@ -702,7 +702,7 @@
             const text = await res.text();
             if (!res.ok) throw new Error(text || "Upload failed.");
           } else {
-            const files = imageFile.files;
+            const files = fileInput.files;
             if (!files || files.length === 0)
               throw new Error("Please choose at least one file.");
             await addImagesFromFiles(files);
