--- a/src/pages/slider.html
+++ b/src/pages/slider.html
@@ -41,13 +41,13 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <!-- your token/401 refresher -->
-    <script src="../js/fetch-auth-interceptor.js"></script>
+    <!-- <script src="../js/fetch-auth-interceptor.js"></script> -->
     <!-- auth guard -->
-    <script
+    <!-- <script
       src="../js/auth-guard.js"
       defer
       data-redirect="../index.html"
-    ></script>
+    ></script> -->
 
     <title>Tour Guide Admin Panel</title>
   </head>
